--- a/MedICSS2021_/Net/new_experiment2_CNN.ipynb
+++ b/MedICSS2021_/Net/new_experiment2_CNN.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-19 13:17:56.316829: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n"
+     ]
+    }
+   ],
    "source": [
     "import nibabel as nib\n",
     "import numpy as np\n",
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Data Preprocessing</h3>"
+    "<h2>Data Preprocessing</h2>"
    ]
   },
   {
@@ -440,10 +448,12 @@
     "for n in N:\n",
     "    # for each retained volume, we create 100 subsamples\n",
     "    for i in range(100):\n",
-    "        ones = np.ones(n) # 1 = retained\n",
+    "        ones = np.ones(n-1) # 1 = retained\n",
     "        zeros = np.zeros(96-n)\n",
     "\n",
-    "        scheme = np.random.choice(np.concatenate([ones,zeros]), 96, replace=False)\n",
+    "        scheme = np.random.choice(np.concatenate([ones,zeros]), 95, replace=False)\n",
+    "        # always select the first b=0 volume\n",
+    "        scheme = np.insert(scheme, 0, 1.0)\n",
     "        scheme = ' '.join(map(str, scheme))\n",
     "        random_dict[n].append(scheme)"
    ]
