updating the experiment notebooks for new experiment 1 and 2

--- a/MedICSS2021_/Net/new_experiment2_AMICO.ipynb
+++ b/MedICSS2021_/Net/new_experiment2_AMICO.ipynb
@@ -27,15 +27,6 @@
     "\"\"\"\n",
     "from FormatData import generate_data, parser as data_parser\n",
     "\"\"\"\n",
-    "packages that trains network\n",
-    "\"\"\"\n",
-    "from Training import train_network\n",
-    "from utils.model import parser as model_parser\n",
-    "\"\"\"\n",
-    "packages that test network\n",
-    "\"\"\"\n",
-    "from Testing import test_model\n",
-    "\"\"\"\n",
     "packages that produce the rejection shceme\n",
     "\"\"\"\n",
     "from filter_qa import parser as filter_parser, load_eddy\n",
@@ -187,21 +178,6 @@
     "cmd = \"--base --label_type A --subjects s01_still s02_still\"\n",
     "args = data_parser().parse_args(cmd.split())\n",
     "generate_data(args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ltype = 'A' # the NODDI parameter we want to estimate, where A stands for ALL\n",
-    "model = 'conv3d'\n",
-    "# firstly, the 3d cnn dataset is required to be generated.\n",
-    "# the cmd line code for generating 3d cnn data\n",
-    "cnn3ddata_cmd = '--subjects s01_still s02_still' + ' --label_type ' + ltype + ' --' + model\n",
-    "cnn3ddata_args  = data_parser().parse_args(cnn3ddata_cmd.split())\n",
-    "generate_data(cnn3ddata_args)"
    ]
   },
   {
@@ -576,6 +552,13 @@
     "    movefile = random_40[i]\n",
     "    movefile = movefile.split()\n",
     "    combine = np.array([int(float(num)) for num in movefile])\n",
+    "\n",
+    "    # for j in range(1, len(combine)):\n",
+    "    #     if combine[j] == 1:\n",
+    "    #         combine[j] = 0\n",
+    "    \n",
+    "    # # the first volume, b=0 is always selected\n",
+    "    # combine[0] = 1\n",
     "    \n",
     "    # create the remained bvals and bvecs for s02 by applying its corresponding rejection scheme\n",
     "    s02_path = '/home/vw/Desktop/IndividualProject/MedICSS2021_/Data-NODDI/s02_still/'\n",
@@ -751,6 +734,13 @@
     "with open('ami_ssim_40_fwf'+str(i)+'.pickle', 'wb') as file:\n",
     "    pickle.dump([item[2] for item in amico_ssim_dict[40][50:]], file, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
